BDP-31769: cherry pick S3 statistics reader (#190)
### What changes were proposed in this pull request?

Cherry-pick changes:
1. [BDP-31769: add S3 statistics reader
#134](https://github.com/datastrato/gravitino-pinterest/pull/134)
2. [BDP-31769: extend table registration to support S3 locations
#117](https://github.com/datastrato/gravitino-pinterest/pull/117)

### Why are the changes needed?

To add S3 files reading that is used for table registration & statistics
upload cases.

### Does this PR introduce _any_ user-facing change?

No, no API changes, just addition of S3 locations reading.

### How was this patch tested?

- [x] Unit tests
- [x] Manual verification:
   ```
./optimizer-cli.sh --type update-statistics --calculator-name
s3-stats-calculator --file-path
s3://pinterest-seattle/iceberg/compaction_partition_stats_dump_json/dt=2026-03-12/

# This operation fails since `pinterest-main` has no changes to generic
catalog that is included in
https://github.com/datastrato/gravitino-pinterest/pull/21
# But S3 reading logic passes correctly and fails on the attempt to
persist stats data:

2026-03-13 23:17:08.504 INFO [main]
[org.apache.gravitino.maintenance.optimizer.common.reader.S3FileReader.listS3Directory(S3FileReader.java:84)]
- Listing S3 directory:
s3://pinterest-seattle/iceberg/compaction_partition_stats_dump_json/dt=2026-03-12/
2026-03-13 23:17:08.970 INFO [main]
[org.apache.gravitino.maintenance.optimizer.common.reader.S3FileReader.getReader(S3FileReader.java:72)]
- Reading S3 file:
s3://pinterest-seattle/iceberg/compaction_partition_stats_dump_json/dt=2026-03-12/_SUCCESS
   ...
2026-03-13 23:18:20.156 INFO [main]
[org.apache.gravitino.maintenance.optimizer.updater.Updater.updateTableStatistics(Updater.java:336)]
- Persisting table statistics:
identifier=generic.ad.ads1k_raw_seq_2mo_1120_yiwu, count=0, details=[]
2026-03-13 23:18:20.156 INFO [main]
[org.apache.gravitino.maintenance.optimizer.updater.Updater.updatePartitionStatistics(Updater.java:353)]
- P